--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -41,7 +41,7 @@ jobs:
      - uses: webbertakken/unity-test-runner@v2
        id: testRunner
        with:
-        projectPath: ./
+        projectPath: ./chess-game-project
         testMode: ${{ matrix.testMode }}
         checkName: ${{ matrix.testMode }} test results
         githubToken: ${{ secrets.GITHUB_TOKEN }}
