--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -1,255 +1,35 @@
-name: GameCI Template 🎮
+name: Build project
 
-on: push
-
-env:
-  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+on: [push, pull_request]
 
 jobs:
- testRunner:
-   name: Test all modes 📝
-   runs-on: ubuntu-latest
-   steps:
-     - name: Checkout code
-       uses: actions/checkout@v2
-
-     - name: Create LFS file list
-       run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-
-     - name: Restore LFS cache
-       uses: actions/cache@v2
-       id: lfs-cache
-       with:
-         path: .git/lfs
-         key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-
-     - name: Git LFS Pull
-       run: |
-         git lfs pull
-         git add .
-         git reset --hard
-
-     - name: Restore Library cache
-       uses: actions/cache@v2
-       with:
-         path: Library
-         key: Library-test-project
-         restore-keys: |
-           Library-test-project-
-           Library-
-
-     - uses: webbertakken/unity-test-runner@v2
-       id: testRunner
-       with:
-        projectPath: ./chess-game-project
-        testMode: ${{ matrix.testMode }}
-        checkName: ${{ matrix.testMode }} test results
-        githubToken: ${{ secrets.GITHUB_TOKEN }}
-
-     - uses: actions/upload-artifact@v2
-       with:
-         name: Test results (all modes)
-         path: ${{ steps.testRunner.outputs.artifactsPath }}
-
- buildWebGL:
-   needs: testRunner
-   name: Build for WebGL 🖥️
-   runs-on: ubuntu-latest
-   strategy:
-     fail-fast: false
-   steps:
-     - name: Checkout code
-       uses: actions/checkout@v2
-
-     - name: Create LFS file list
-       run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-
-     - name: Restore LFS cache
-       uses: actions/cache@v2
-       id: lfs-cache
-       with:
-         path: .git/lfs
-         key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-
-     - name: Git LFS Pull
-       run: |
-         git lfs pull
-         git add .
-         git reset --hard
-
-     - name: Restore Library cache
-       uses: actions/cache@v2
-       with:
-         path: Library
-         key: Library-build-WebGL
-         restore-keys: |
-           Library-build-
-           Library-
-
-     - uses: webbertakken/unity-builder@v2
-       with:
-         projectPath: ./chess-game-project
-         targetPlatform: WebGL
-
-     - uses: actions/upload-artifact@v2
-       with:
-         name: build-WebGL
-         path: build/WebGL
-
- buildWindows:
-   needs: testRunner
-   name: Build for Windows 🖥️
-   runs-on: ubuntu-latest
-   strategy:
-     fail-fast: false
-   steps:
-     - name: Checkout code
-       uses: actions/checkout@v2
-
-     - name: Create LFS file list
-       run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-
-     - name: Restore LFS cache
-       uses: actions/cache@v2
-       id: lfs-cache
-       with:
-         path: .git/lfs
-         key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-
-     - name: Git LFS Pull
-       run: |
-         git lfs pull
-         git add .
-         git reset --hard
-
-     - name: Restore Library cache
-       uses: actions/cache@v2
-       with:
-         path: Library
-         key: Library-build-StandaloneWindows64
-         restore-keys: |
-           Library-build-
-           Library-
-
-     - uses: webbertakken/unity-builder@v2
-       with:
-         projectPath: ./chess-game-project
-         targetPlatform: StandaloneWindows64
-
-     - uses: actions/upload-artifact@v2
-       with:
-         name: build-StandaloneWindows64
-         path: build/StandaloneWindows64
-
-buildLinux:
-   needs: testRunner
-   name: Build for Linux 🖥️
-   runs-on: ubuntu-latest
-   strategy:
-     fail-fast: false
-   steps:
-     - name: Checkout code
-       uses: actions/checkout@v2
-
-     - name: Create LFS file list
-       run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-
-     - name: Restore LFS cache
-       uses: actions/cache@v2
-       id: lfs-cache
-       with:
-         path: .git/lfs
-         key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-
-     - name: Git LFS Pull
-       run: |
-         git lfs pull
-         git add .
-         git reset --hard
-
-     - name: Restore Library cache
-       uses: actions/cache@v2
-       with:
-         path: Library
-         key: Library-build-StandaloneLinux64
-         restore-keys: |
-           Library-build-
-           Library-
-
-     - uses: webbertakken/unity-builder@v2
-       with:
-         projectPath: ./chess-game-project
-         targetPlatform: StandaloneLinux64
-
-     - uses: actions/upload-artifact@v2
-       with:
-         name: build-StandaloneLinux64
-         path: build/StandaloneLinux64
-#
-#  buildAndroid:
-#    needs: testRunner
-#    name: Build for Android 📱
-#    runs-on: ubuntu-latest
-#    strategy:
-#      fail-fast: false
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#
-#      - name: Create LFS file list
-#        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-#
-#      - name: Restore LFS cache
-#        uses: actions/cache@v2
-#        id: lfs-cache
-#        with:
-#          path: .git/lfs
-#          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-#
-#      - name: Git LFS Pull
-#        run: |
-#          git lfs pull
-#          git add .
-#          git reset --hard
-#
-#      - name: Restore Library cache
-#        uses: actions/cache@v2
-#        with:
-#          path: Library
-#          key: Library-build-Android
-#          restore-keys: |
-#            Library-build-
-#            Library-
-#
-#      - uses: webbertakken/unity-builder@v2
-#        with:
-#          targetPlatform: Android
-#
-#      - uses: actions/upload-artifact@v2
-#        with:
-#          name: build-Android
-#          path: build/Android
-#
-#
-#  deployPages:
-#    needs: buildWebGL
-#    name: Deploy to Github Pages 🚀
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#
-#      - uses: actions/download-artifact@v2
-#        with:
-#          name: build-WebGL
-#          path: build
-#
-#      - name: Display structure of root files
-#        run: ls -R
-#        working-directory: build/WebGL
-#
-#      - name: Deploy 🚀
-#        uses: JamesIves/github-pages-deploy-action@4.1.4
-#        with:
-#          branch: gh-pages
-#          folder: build/WebGL
+  buildForAllSupportedPlatforms:
+    name: Build for ${{ matrix.targetPlatform }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        targetPlatform:
+          - WebGL # WebGL.
+          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          - StandaloneLinux64 # Build a Linux 64-bit standalone.
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          lfs: true
+      - uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-${{ matrix.targetPlatform }}
+          restore-keys: Library-
+      - uses: game-ci/unity-builder@v2
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        with:
+          projectPath: ./chess-game-project
+          targetPlatform: ${{ matrix.targetPlatform }}
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Build-${{ matrix.targetPlatform }}
+          path: build/${{ matrix.targetPlatform }}
