--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ Icon?
 ehthumbs.db
 Thumbs.db
 *.log
+chess-game-project/Logs/AssetImportWorker0.log
+chess-game-project/Logs/AssetImportWorker1.log
+chess-game-project/Logs/shadercompiler-AssetImportWorker0.log
+chess-game-project/Logs/shadercompiler-UnityShaderCompiler.exe0.log
