Custom Tabuleiro e Fundo
Customização do fundo está programada, mas sem imagem para alternar. Tabuleiro funciona perfeitamente

--- a/.gitignore
+++ b/.gitignore
@@ -71,5 +71,8 @@ crashlytics-build.properties
 [Aa]ssets/[Ss]treamingAssets/aa.meta
 [Aa]ssets/[Ss]treamingAssets/aa/*
 
-#CodeCoverage
+# Code Coverage
 CodeCoverage/
+
+chess-game-project/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+chess-game-project/UserSettings/Layouts/default-2021.dwlt
